--- a/index.html
+++ b/index.html
@@ -666,16 +666,16 @@
         </div>
         <div class="footer__social social">
           <a href="#" class="social__item">
-            <img src="img/footer/social/01.svg" alt="social">
+            <img src="./Img/footer/social/01.svg" alt="social">
           </a>
           <a href="#" class="social__item">
-            <img src="img/footer/social/02.svg" alt="social">
+            <img src="./Img/footer/social/02.svg" alt="social">
           </a>
           <a href="#" class="social__item">
-            <img src="img/footer/social/03.svg" alt="social">
+            <img src="./Img/footer/social/03.svg" alt="social">
           </a>
           <a href="#" class="social__item">
-            <img src="img/footer/social/04.svg" alt="social">
+            <img src="./Img/footer/social/04.svg" alt="social">
           </a>
         </div>
       </div>
